--- a/assets/css/buddypress.css
+++ b/assets/css/buddypress.css
@@ -161,6 +161,7 @@ body #buddypress.buddypress-wrap form#whats-new-form #whats-new-options select,
 
 #buddypress .comment-reply-link,
 #buddypress .generic-button a,
+#buddypress .follow-button.generic-button button,
 #buddypress .standard-form button,
 #buddypress a.button,
 #buddypress input[type="button"],
@@ -228,6 +229,7 @@ button.gamipress-achievement-unlock-with-points-button,
 
 #buddypress .comment-reply-link:hover,
 #buddypress .generic-button a:hover,
+#buddypress .follow-button.generic-button button:hover,
 #buddypress .standard-form button:hover,
 #buddypress a.button:hover,
 #buddypress input[type="button"]:hover,
