--- a/assets/css/widgets.css
+++ b/assets/css/widgets.css
@@ -69,7 +69,7 @@
 
 .widget_categories li,
 .widget_archive li {
-    color: #7d7d7d;
+    color: var(--global-font-color);
     line-height: 1.3;
     padding-bottom: .5em;
     margin-bottom: 5px;
@@ -92,7 +92,7 @@
     display: block;
     padding: 0.6em 0;
     text-decoration: none;
-    border-bottom: 1px dashed #808080;
+    border-bottom: 1px solid var(--global-border-color);
 }
 
 .widget_pages a:hover,
@@ -100,7 +100,7 @@
 .widget_nav_menu a:hover,
 .widget_nav_menu a:focus {
     text-decoration: none;
-    border-bottom: 1px dashed #808080;
+    border-bottom: 1px solid var(--global-border-color);
 }
 
 .widget_pages li,
