--- a/assets/css/woocommerce.css
+++ b/assets/css/woocommerce.css
@@ -11,6 +11,7 @@
 # Extra Plugin Support
     # TP WooCommerce Product Gallery
     # Advanced WooCommerce Product Gallery Slider
+    # Infinite Loader for WooCommerce
 --------------------------------------------------------------*/
 
 
@@ -742,4 +743,69 @@ button.fancybox-button {
     transition: color .2s;
     vertical-align: top;
     width: 44px;
+}
+
+/*--------------------------------------------------------------
+## Infinite Loader for WooCommerce
+--------------------------------------------------------------*/
+.infinite-loader-active.woocommerce .products ul::after,
+.infinite-loader-active.woocommerce .products ul::before,
+.infinite-loader-active.woocommerce ul.products::after,
+.infinite-loader-active.woocommerce ul.products::before {
+    content: none;
+}
+
+.infinite-loader-active.woocommerce .products li.product {
+    width: 100% !important;
+    max-width: 100% !important;
+    margin: 0 !important;
+}
+
+@media screen and (min-width: 600px) {
+    .infinite-loader-active .products.columns-4 {
+        --products-column: 3;
+        grid-gap: 30px;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .infinite-loader-active .products.columns-2 {
+        --products-column: 2;
+    }
+
+    .infinite-loader-active .products.columns-3 {
+        --products-column: 3;
+    }
+
+    .infinite-loader-active .products.columns-4 {
+        --products-column: 4;
+    }
+
+    .infinite-loader-active .products.columns-5 {
+        --products-column: 5;
+    }
+
+    .infinite-loader-active .products.columns-6 {
+        --products-column: 6;
+    }
+
+    .infinite-loader-active .products.columns-7 {
+        --products-column: 7;
+    }
+
+    .infinite-loader-active .products.columns-8 {
+        --products-column: 8;
+    }
+
+    .infinite-loader-active .products.columns-9 {
+        --products-column: 9;
+    }
+}
+
+.infinite-loader-active.woocommerce .products {
+    display: grid !important;
+    grid-template-columns: repeat(var(--products-column, 1), 1fr);
+    gap: 30px;
+    margin: 0 0 30px;
+    padding: 0;
 }
