--- a/assets/css/buddyx-customizer.css
+++ b/assets/css/buddyx-customizer.css
@@ -47,3 +47,8 @@
     background: var(--accentColor);
     box-shadow: 0px 8px 15px 0px rgba(0, 0, 0, .08);
 }
+
+/* Hide Custom Color Option */
+#accordion-section-colors {
+    display: none !important;
+}
