--- a/assets/css/learndash.css
+++ b/assets/css/learndash.css
@@ -5,6 +5,7 @@
 # Course Listing
 # Single Course
 # Focus Mode
+# LD Groups
 # LD Profile
 # Widgets
 --------------------------------------------------------------*/
@@ -25,7 +26,7 @@ p:empty {
 
 .ld-course-list-items .ld_course_grid .btn-primary {
     border: 0;
-}
+} 
 
 .ld-course-list-items .ld_course_grid .btn-primary,
 .learndash-wrapper .ld-expand-button,
@@ -443,20 +444,20 @@ body .ld-course-list-items .ld_course_grid .thumbnail.course .ld_course_grid_pri
     border: 0;
 }
 
-.learndash-wrapper .ld-button,
-.learndash-wrapper .ld-expand-button,
-.learndash-wrapper .btn-join,
-.learndash-wrapper #btn-join,
-.learndash-wrapper .learndash_mark_complete_button,
-.learndash-wrapper #learndash_mark_complete_button,
-.learndash-wrapper .ld-login-modal .ld-button,
-.learndash-wrapper .ld-login-modal input[type=submit],
-.learndash-wrapper .ld-login-modal .ld-login-modal-register #wp-submit,
-.learndash-wrapper .ld-item-list .ld-item-search .ld-item-search-fields .ld-item-search-submit .ld-button,
+.learndash-wrapper:not(.learndash-wrapper--modern) .ld-button,
+.learndash-wrapper:not(.learndash-wrapper--modern) .ld-expand-button,
+.learndash-wrapper:not(.learndash-wrapper--modern) .btn-join,
+.learndash-wrapper:not(.learndash-wrapper--modern) #btn-join,
+.learndash-wrapper:not(.learndash-wrapper--modern) .learndash_mark_complete_button,
+.learndash-wrapper:not(.learndash-wrapper--modern) #learndash_mark_complete_button,
+.learndash-wrapper:not(.learndash-wrapper--modern) .ld-login-modal .ld-button,
+.learndash-wrapper:not(.learndash-wrapper--modern) .ld-login-modal input[type=submit],
+.learndash-wrapper:not(.learndash-wrapper--modern) .ld-login-modal .ld-login-modal-register #wp-submit,
+.learndash-wrapper:not(.learndash-wrapper--modern) .ld-item-list .ld-item-search .ld-item-search-fields .ld-item-search-submit .ld-button,
 .ld-course-list-items .ld_course_grid .thumbnail.course a.btn-primary,
 .ldx-plugin .uo-toolkit-grid__course-action input,
 .learndash-resume-button input[type=submit],
-.learndash-wrapper .ld-login-button,
+.learndash-wrapper:not(.learndash-wrapper--modern) .ld-login-button,
 .learndash-reset-form .learndash-reset-button[type=submit] {
     padding: .625em 1.5em;
     font-size: 95%;
@@ -468,12 +469,26 @@ body .ld-course-list-items .ld_course_grid .thumbnail.course .ld_course_grid_pri
     transition: all .15s ease;
 }
 
+/* Modern Layout */
+.single-sfwd-courses .learndash-wrapper.ld-layout,
+.single-groups .learndash-wrapper.ld-layout {
+    display: flex;
+    flex-direction: column-reverse;
+}
+
+.single-sfwd-courses .learndash-wrapper.ld-layout .ld-layout__header,
+.single-groups .learndash-wrapper.ld-layout .ld-layout__header {
+    order: 1;
+}
 
 /*--------------------------------------------------------------
 # Single Course
 --------------------------------------------------------------*/
+.single-sfwd-courses article .entry-header {
+    max-width: 100%;
+}
 
-.single-sfwd-courses .sfwd-courses header.entry-header {
+.single-sfwd-courses .sfwd-courses:has(.learndash-wrapper--modern) .entry-header {
     display: none;
 }
 
@@ -487,6 +502,7 @@ body .ld-course-list-items .ld_course_grid .thumbnail.course .ld_course_grid_pri
 
 .single-sfwd-courses .post-thumbnail img {
     width: 100%;
+    border-radius: var(--global-border-radius);
 }
 
 .sfwd-courses .entry-meta,
@@ -494,6 +510,19 @@ body .ld-course-list-items .ld_course_grid .thumbnail.course .ld_course_grid_pri
 .sfwd-courses .entry-footer,
 .single-groups .entry-footer {
     display: none;
+}
+
+.learndash-wrapper .ld-tabs .ld-tabs-navigation .ld-tab.ld-tab {
+    border: 0;
+}
+
+.learndash-wrapper .ld-tabs .ld-tabs-navigation .ld-tab .ld-icon {
+    font-size: 1.3em;
+}
+
+.learndash-wrapper .ld-tabs .ld-tabs-navigation .ld-tab.ld-tab .ld-icon.star-blank::before {
+    content: '\f005';
+    font-family: "Font Awesome 6 Free";
 }
 
 .learndash-wrapper .ld-tabs .ld-tabs-navigation:after,
@@ -542,6 +571,66 @@ body .ld-course-list-items .ld_course_grid .thumbnail.course .ld_course_grid_pri
 }
 
 
+/* Course Review */
+.learndash-course-reviews-container .reviews-list .ld_review {
+    border-color: var(--global-border-color);
+    padding: 1rem 0;
+}
+
+.learndash-course-reviews-review-stars {
+    font-size: 1.5em;
+}
+
+.learndash-course-reviews-container .average-review {
+    margin-bottom: 1rem;
+}
+
+.learndash-course-reviews-container .average-review .average-review-label {
+    line-height: inherit;
+}
+
+.learndash-course-reviews-container .learndash-course-reviews-stars-input .review-star label {
+    cursor: pointer;
+}
+
+.learndash-course-reviews-container .reviews-list .ld_review .learndash-course-reviews-author b.review-title,
+.learndash-course-reviews-container .reviews-list .ld_review .learndash-course-reviews-author .learndash-course-reviews-metadata {
+    margin-bottom: 5px;
+    display: block;
+}
+
+.learndash-course-reviews-container .reviews-list .ld_review .learndash-course-reviews-author img.avatar {
+    border: 0 !important;
+}
+
+.learndash-course-reviews-container .reviews-list .ld_review .learndash-course-reviews-author .learndash-course-reviews-metadata {
+    display: flex;
+    align-items: center;
+    flex-flow: row wrap;
+    gap: 10px;
+}
+
+.learndash-course-reviews-container .learndash-course-reviews-form .grid-container .grid-x {
+    margin: 0 0 15px;
+}
+
+.learndash-course-reviews-container #learndash-course-reviews-review-title {
+    width: 100%;
+}
+
+.learndash-course-reviews-container .learndash-course-reviews-form .grid-container .grid-x label {
+    display: block;
+    margin-bottom: 5px;
+}
+
+.learndash-course-reviews-container .learndash-course-reviews-form .grid-container .grid-x:last-child {
+    margin: 0;
+}
+
+.learndash-course-reviews-container .learndash-course-reviews-form .learndash-course-reviews-stars-input .review-star {
+    margin-bottom: 0;
+}
+
 /*--------------------------------------------------------------
 # Lessons / Topic / Quiz
 --------------------------------------------------------------*/
@@ -570,6 +659,26 @@ body .ld-course-list-items .ld_course_grid .thumbnail.course .ld_course_grid_pri
     border-bottom: 5px solid var(--color-theme-primary);
 }
 
+/*--------------------------------------------------------------
+# LD Groups
+--------------------------------------------------------------*/
+.single-groups article .entry-header {
+    max-width: 100%;
+}
+
+.single-groups article:has(.learndash-wrapper--modern)>.entry-header {
+    display: none;
+}
+
+.single-groups .post-thumbnail img {
+    width: 100%;
+    border-radius: var(--global-border-radius);
+}
+
+.single-groups .learndash-wrapper.learndash-wrapper--modern .ld-tab-bar--single,
+.single-groups .learndash-wrapper.learndash-wrapper--modern .ld-layout__sidebar {
+    margin-top: 0;
+}
 
 /*--------------------------------------------------------------
 # LD Profile
